Refactor syntax to java8